SOLR-6705: Add specific JVM version checking to Windows start scripts
git-svn-id: https://svn.apache.org/repos/asf/lucene/dev/branches/lucene_solr_4_10@1638484 13f79535-47bb-0310-9956-ffa450edef68